Add support for submitting workouts via API
This adds support for FitoTrack to automatically upload workouts via
HTTP POST. We had to add authentication via query parameter, since
FitoTrack did not support Header or BasicAuth authentication.

We also now have a README section that can be extended.

Fixes #64
